# hydrocare_master_slave

./: .gitignore
hydrocare_master/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
hydrocare_master/components/ble/: CMakeLists.txt  ble.c  ble.cpp  ble.h
hydrocare_master/components/ble/include/: common.h  gap.h  gatt_svc.h
hydrocare_master/components/ble/src/: gap.c  gatt_svc.c
hydrocare_master/components/communication/: CMakeLists.txt  communication.c  communication.h
hydrocare_master/components/config/: CMakeLists.txt  config.c  config.h
hydrocare_master/components/measurement/: CMakeLists.txt  measurement.c  measurement.h
hydrocare_master/components/ota/: CMakeLists.txt  ota.c  ota.h
hydrocare_master/components/sdcard/: CMakeLists.txt  sd.c  sd.h
hydrocare_master/components/timer/: CMakeLists.txt  timer.c  timer.h
hydrocare_master/components/ui/: CMakeLists.txt  ui.c  ui.h
hydrocare_master/components/wifi_stream/: CMakeLists.txt  wifi_stream.c  wifi_stream.h
hydrocare_master/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
hydrocare_sensor/: .clangd  CMakeLists.txt
hydrocare_sensor/components/bme680/: CMakeLists.txt  bme680.c  bme680.h  bme680_types.h
hydrocare_sensor/components/communication/: CMakeLists.txt  communication.c  communication.h
hydrocare_sensor/components/communication/include/: communication.h
hydrocare_sensor/components/communication/src/: communication.c
hydrocare_sensor/components/config/: CMakeLists.txt  config.c  config.h
hydrocare_sensor/components/leds/include/: leds.h
hydrocare_sensor/components/leds/src/: leds.c
hydrocare_sensor/components/lis3dh/: CMakeLists.txt  lis3dh.c  lis3dh.h  lis3dh_types.h
hydrocare_sensor/components/measurement/: CMakeLists.txt  measurement.c  measurement.h
hydrocare_sensor/components/mlx90641/: CMakeLists.txt
hydrocare_sensor/components/mlx90641/functions/: MLX90641_I2C_Driver.c
hydrocare_sensor/main/: CMakeLists.txt  idf_component.yml  main.c
hydrocare_slave/: .gitignore  sdkconfig.defaults
hydrocare_slave/components/bme680/: CMakeLists.txt  bme680.c
hydrocare_slave/components/communication/: communication.c  communication.h
hydrocare_slave/components/config/: CMakeLists.txt  config.c  config.h
hydrocare_slave/components/lis3dh/: lis3dh.c  lis3dh.h
hydrocare_slave/components/measurement/: measurement.c  measurement.h
hydrocare_slave/components/mlx90641/functions/: MLX90641_API.c
hydrocare_slave/main/: main.c
